# py-rust-stemmers

./: .gitignore  Cargo.toml  pyproject.toml
.github/scripts/: validate_wheels.py
.github/workflows/: clippy.yml  release.yml  rustfmt.yml
py_rust_stemmers/: __init__.py  __init__.pyi
src/: lib.rs
tests/: speedtest.py  test_py_rust_stemers.py  test_py_rust_stemmers.py
