[project]
name = "py_rust_stemmers"
version = "0.1.7"
description = "Fast and parallel snowball stemmer"
requires-python = ">=3.10"

# Include a long description
readme = "README.md"

[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest"]
